@@ -1,1 +1,5 @@
 # BasicWeatherForecast
+This project consists of javafx and json for GUI and data parsing.
+Use javafx and json libraries in ur IDE to run this jar(i'll reference these lib in the repo)
+Add this Vm option in ur IDE(basically avail in launch.json for vscode) for intellIJ u can find it in run>>edit config>>add vm options,
+--module-path "YourJavafxpath\lib" --add-modules javafx.controls,javafx.fxml 
